// Resik
// Author: Dedy Fajar Setyawan
// See: https://github.com/dedyf5/resik

syntax = "proto3";

package transaction;
option go_package = "github.com/dedyf5/resik/app/grpc/handler/transaction";

import "app/grpc/proto/meta/meta.proto";
import "app/grpc/proto/status/status.proto";
import "core/transaction/response/merchant.proto";

message MerchantOmzetGetRes {
    status.Status Status = 1; // @gotags: json:"status"
    repeated response.MerchantOmzet Data = 2; // @gotags: json:"data"
    meta.Meta Meta = 3; // @gotags: json:"meta"
}
